--- a/Biriyanid.html
+++ b/Biriyanid.html
@@ -168,7 +168,7 @@
 </div>
 <div class="page-btn">
     <span>1</span>
-    <span>2</span>
+    <span> <a href="juiced.html"> 2</span>
     <span>&#8594;</span>
 </div>
 </div>
