--- a/Biriyanid.html
+++ b/Biriyanid.html
@@ -167,7 +167,7 @@
 
 </div>
 <div class="page-btn">
-    <span>1</span>
+    <span> <a href="Tacod.html"> 1</span>
     <span> <a href="juiced.html"> 2</span>
     <span>&#8594;</span>
 </div>
