--- a/pizzad.html
+++ b/pizzad.html
@@ -167,7 +167,7 @@
 </div>
 <div class="page-btn">
     <span>1</span>
-    <span>2</span>
+    <span> <a href="dessertd.html"> 2</span>
     <span>&#8594;</span>
 </div>
 </div>
